# ocs

./: .gitignore  .gitlab-ci.yml  COPYING  ChangeLog  Makefile.am  NEWS  README  README.build  README.debian  README.debian.md  README.docker  README.docker.md  README.kubernetes  README.kubernetes.md  README.maintainer  README.md  README.redhat.md  README.ubuntu  README.ubuntu.md  assoiscation.funcs  configure.ac  ocs.rel.in  ocs.service.conf  sigscale_snmp_agent.erl  sys.config.in
c_src/: Makefile.am  ocs_eap_aka.c  ocs_eap_pwd.c
doc/: Makefile.am  ctf-ro-msc.puml  diagrams.graffle  overview.edoc-in  pagination-msc.puml  pcef-gx-msc.puml  sigscale.css  supervision.edoc  swm-swx-msc.puml
ebin/: Makefile.am  Makefile.in  ocs.app-in  ocs.appup  ocs.appup.in
frontend/: README  bower.json  sig-add.html  sig-search.html  start-dev.sh
frontend/priv/www/: bower.json  index.html  index.html.backup  sig-add.html  sig-list.html  sig-search.html
frontend/src/: frontend.app.src  frontend.erl  frontend_app.erl  frontend_deps.erl  frontend_sup.erl  frontend_web.erl
include/: Makefile.am  diameter_3gpp.hrl  ocs.hrl  ocs_eap_codec.hrl  ocs_log.hrl  ocs_wm.hrl
mibs/: Makefile.am  RADIUS-ACC-SERVER-MIB.funcs  RADIUS-ACC-SERVER-MIB.mib  RADIUS-AUTH-SERVER-MIB.funcs  RADIUS-AUTH-SERVER-MIB.mib  SIGSCALE-DIAMETER-BASE-PROTOCOL-MIB.funcs  SIGSCALE-DIAMETER-BASE-PROTOCOL-MIB.mib  SIGSCALE-DIAMETER-CC-APPLICATION-MIB.funcs  SIGSCALE-DIAMETER-CC-APPLICATION-MIB.mib  SIGSCALE-OCS-MIB.funcs  SIGSCALE-OCS-MIB.mib
priv/: Makefile.am  frontend_props.conf
priv/examples/: Makefile.am  example.csv  tariff-periods.csv  tariff-rates.csv
priv/lib/: Makefile.am
priv/mibs/: Makefile.am
priv/schema/: Makefile.am  Nrf_Rating.json  api-catalog.linkset.jsonld  balanceManagement.swagger.json  partyManagement.swagger.json  productCatalogManagement.swagger.json  productInventoryManagement.swagger.json  resourceCatalogManagement.swagger.json  resourceInventoryManagement.swagger.json  serviceCatalogManagement.swagger.json  serviceInventoryManagement.swagger.json  usageManagement.swagger.json  usageManagment.swagger.json
priv/www/: Makefile.am  README  api-catalog.linkset.jsonld  bower.json  index.html  manifest.json  package.json.in  polymer.json  service-worker.js  sig-access-list.html  sig-accounting-list.html  sig-acct-list.html  sig-acct-log-files.html  sig-add-client.html  sig-add.html  sig-app.html  sig-app.html-in  sig-auth-list.html  sig-balance-list.html  sig-bucket-add.html  sig-bucket-list.html  sig-client-add.html  sig-client-list.html  sig-client-update.html  sig-help.html-in  sig-http-list.html  sig-ipdr-list-voip.html  sig-ipdr-list-wlan.html  sig-ipdr-list.html  sig-ipdr-log-files-wlan.html  sig-ipdr-log-files.html  sig-list.html  sig-offer-add.html  sig-offer-list.html  sig-offer-update.html  sig-policy-add.html  sig-policy-list.html  sig-policy-update.html  sig-prefix-add.html  sig-prefix-list.html  (+18 more)
priv/www/locales/: en.json  es.json
priv/www/src/: ocs-icons.js  sig-access-list.js  sig-accounting-list.js  sig-app.js  sig-balance-list.js  sig-bucket-add.js  sig-bucket-list.js  sig-client-add.js  sig-client-list.js  sig-client-update.js  sig-dashboard.js  sig-help.js  sig-help.js-in  sig-http-list.js  sig-ipdr-list-voip.js  sig-ipdr-list-wlan.js  sig-ipdr-log-files-voip.js  sig-offer-add.js  sig-offer-list.js  sig-offer-update.js  sig-period-table-add.js  sig-period-table-list.js  sig-policy-add.js  sig-policy-list.js  sig-policy-table-add.js  sig-policy-update.js  sig-prefix-add.js  sig-prefix-list.js  sig-prefix-table-add.js  sig-prefix-update.js  sig-product-add.js  sig-product-list.js  sig-rate-table-add.js  sig-rate-table-list.js  sig-roaming-table-add.js  sig-roaming-table-list.js  sig-sub-add.js  sig-sub-list.js  sig-sub-update.js  sig-tariff-period-add.js  (+17 more)
priv/www/usageManagement/v1/usageSpecification/: PublicWlanAccessUsageSpec
scripts/: aaa-sta.escript  data_session  data_session.escript  export_cdr.escript  export_ipdr.escript  fill_subs.escript  install_certs.sh  install_release.sh  install_snmp.sh  install_tables.escript  join_cluster.escript  nrf.escript  ocs  ocs.in  ocs.service  ocs.service.in  send_sms.escript  snapshot.escript  voice_call  voice_call.escript
src/: 3gpp.dia  3gpp_gx_application.dia  3gpp_ro_application.dia  3gpp_s6a_application.dia  3gpp_s6b_application.dia  3gpp_sta_application.dia  3gpp_swm_application.dia  3gpp_swx_application.dia  Makefile.am  cc_application_rfc4006.dia  eap_application_rfc4072.dia  etsi.dia  ietf.dia  mod_oauth.erl  mod_ocs_rest_accepted_content.erl  mod_ocs_rest_delete.erl  mod_ocs_rest_dispatcher.erl  mod_ocs_rest_get.erl  mod_ocs_rest_head.erl  mod_ocs_rest_lang.erl  mod_ocs_rest_patch.erl  mod_ocs_rest_post.erl  mod_ocs_rest_put.erl  nas_application_rfc7155.dia  ocs.erl  ocs_accounting_sup.erl  ocs_acct_server.erl  ocs_app.erl  ocs_authentication_sup.erl  ocs_deregister_fsm.erl  ocs_deregister_fsm_sup.erl  ocs_diameter.erl  ocs_diameter_3gpp_gx_application_cb.erl  ocs_diameter_3gpp_ro_application_cb.erl  ocs_diameter_3gpp_ro_nrf_app_cb.erl  ocs_diameter_3gpp_s6a_application_cb.erl  ocs_diameter_3gpp_s6b_application_cb.erl  ocs_diameter_3gpp_sta_application_cb.erl  ocs_diameter_3gpp_swm_application_cb.erl  ocs_diameter_3gpp_swx_application_cb.erl  (+132 more)
test/: Makefile.am  ct.cfg  diameter_test_client.erl  diameter_test_client_cb.erl  diameter_test_server_cb.erl  mod_ct_nrf.erl  ocs_accounting_SUITE.erl  ocs_api_SUITE.erl  ocs_charging_SUITE.erl  ocs_codec_diameter_SUITE.erl  ocs_codec_eap_SUITE.erl  ocs_diameter_SUITE.erl  ocs_diameter_auth_SUITE.erl  ocs_eap_SUITE.erl  ocs_eap_aka_SUITE.erl  ocs_eap_akap_SUITE.erl  ocs_eap_pwd_SUITE.erl  ocs_eap_ttls_SUITE.erl  ocs_lib.erl  ocs_log_SUITE.erl  ocs_milenage_SUITE.erl  ocs_product_SUITE.erl  ocs_rating_SUITE.erl  ocs_re_interface_SUITE.erl  ocs_rest_api_SUITE.erl  ocs_rest_lib_SUITE.erl  ocs_simple_auth_SUITE.erl  ocs_snmp_SUITE.erl  ocs_test_lib.erl  peer_tls_transport.erl  peer_ttls_transport.erl  sys.config  sys.config-in  test.spec  test_event.erl
